--- a/minix86/minix86/minix86.vcxproj.filters
+++ b/minix86/minix86/minix86.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="mini\exec_buffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mini\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mini\memory.h">
