--- a/minix86/minix86/minix86.vcxproj.filters
+++ b/minix86/minix86/minix86.vcxproj.filters
@@ -21,7 +21,10 @@
     <ClCompile Include="mini\exec_buffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="mini\main.cpp">
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mini\x86\inst.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="mini\exec_buffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mini\x86\inst.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
